// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataPicker renders with defaultProps 1`] = `
<div
  className="ax-card ax-card--size-medium ax-card--border ax-card--shade-1 ax-card--border-radius-small"
  onClick={undefined}
>
  <div
    className="ax-data-picker"
  >
    <div
      className="ax-data-picker__dropdown"
    >
      <div
        className="ax-card__content ax-card__content--separator-solid ax-card__content--size-small"
      >
        <div
          className="ax-grid__container ax-space--x6"
        >
          <div
            className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--vertical-middle"
          >
            <div
              className="ax-grid__cell ax-grid__cell--none"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="ax-color-picker__option ax-color-picker__option--empty"
                onClick={[Function]}
                style={
                  Object {
                    "height": ".75rem",
                    "width": ".75rem",
                  }
                }
              />
            </div>
            <div
              className="ax-grid__cell"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="ax-data-picker__link"
                data-ax-at="9c4d25dadaa7"
                onClick={[Function]}
                onFocus={[Function]}
                pointerEventsDisabled={false}
              >
                <a
                  className="ax-link ax-link--style-body"
                >
                  <div
                    className="ax-grid__container ax-space--x6"
                  >
                    <div
                      className="ax-grid ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--vertical-middle"
                    >
                      <div
                        className="ax-grid__cell"
                        style={
                          Object {
                            "width": undefined,
                          }
                        }
                      >
                        <h5
                          className="ax-space--x2 ax-text--ellipsis ax-text--size-large"
                          title="Lorem ipsum"
                        >
                          Lorem ipsum
                        </h5>
                      </div>
                      <div
                        className="ax-grid__cell ax-grid__cell--none"
                        style={
                          Object {
                            "width": undefined,
                          }
                        }
                      >
                        <svg
                          className="ax-icon ax-icon--chevron-down"
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "<path d=\\"M4 5L2.5 6.5 8 12l5.5-5.5L12 5 8 9z\\" fill-rule=\\"nonzero\\" fill=\\"currentColor\\"/>",
                            }
                          }
                          style={
                            Object {
                              "height": "1rem",
                              "width": "1rem",
                            }
                          }
                          viewBox="0 0 16 16"
                        />
                      </div>
                    </div>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ax-data-picker__meta"
    >
      <div
        className="ax-card__content ax-card__content--separator-solid ax-card__content--size-small"
      />
    </div>
  </div>
</div>
`;

exports[`DataPicker renders with just DataPickerDropdown 1`] = `
<div
  className="ax-card ax-card--size-medium ax-card--border ax-card--shade-1 ax-card--border-radius-small"
  onClick={undefined}
>
  <div
    className="ax-data-picker"
  >
    <div
      className="ax-data-picker__dropdown"
    >
      <div
        className="ax-card__content ax-card__content--separator-solid ax-card__content--size-small"
      >
        <div
          className="ax-grid__container ax-space--x6"
        >
          <div
            className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--vertical-middle"
          >
            <div
              className="ax-grid__cell ax-grid__cell--none"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="ax-color-picker__option ax-color-picker__option--empty"
                onClick={[Function]}
                style={
                  Object {
                    "height": ".75rem",
                    "width": ".75rem",
                  }
                }
              />
            </div>
            <div
              className="ax-grid__cell"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="ax-data-picker__link"
                data-ax-at="9c4d25dadaa7"
                onClick={[Function]}
                onFocus={[Function]}
                pointerEventsDisabled={false}
              >
                <a
                  className="ax-link ax-link--style-body"
                >
                  <div
                    className="ax-grid__container ax-space--x6"
                  >
                    <div
                      className="ax-grid ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--vertical-middle"
                    >
                      <div
                        className="ax-grid__cell"
                        style={
                          Object {
                            "width": undefined,
                          }
                        }
                      >
                        <h5
                          className="ax-space--x2 ax-text--ellipsis ax-text--size-large"
                          title="Lorem ipsum"
                        >
                          Lorem ipsum
                        </h5>
                      </div>
                      <div
                        className="ax-grid__cell ax-grid__cell--none"
                        style={
                          Object {
                            "width": undefined,
                          }
                        }
                      >
                        <svg
                          className="ax-icon ax-icon--chevron-down"
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "<path d=\\"M4 5L2.5 6.5 8 12l5.5-5.5L12 5 8 9z\\" fill-rule=\\"nonzero\\" fill=\\"currentColor\\"/>",
                            }
                          }
                          style={
                            Object {
                              "height": "1rem",
                              "width": "1rem",
                            }
                          }
                          viewBox="0 0 16 16"
                        />
                      </div>
                    </div>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataPicker renders with just DataPickerMeta 1`] = `
<div
  className="ax-card ax-card--size-medium ax-card--shade-3 ax-card--border-radius-small"
  onClick={undefined}
>
  <div
    className="ax-data-picker"
  >
    <div
      className="ax-data-picker__dropdown"
    >
      <div
        className="ax-card__content ax-card__content--separator-solid ax-card__content--size-small"
      >
        <div
          className="ax-grid__container ax-space--x6"
        >
          <div
            className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--vertical-middle"
          >
            <div
              className="ax-grid__cell ax-grid__cell--none"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="ax-color-picker__option ax-color-picker__option--empty"
                onClick={[Function]}
                style={
                  Object {
                    "height": ".75rem",
                    "width": ".75rem",
                  }
                }
              />
            </div>
            <div
              className="ax-grid__cell"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <h5
                className="ax-space--x2 ax-text--ellipsis ax-text--size-large"
                title="Lorem ipsum"
              >
                Lorem ipsum
              </h5>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ax-data-picker__meta"
    >
      <div
        className="ax-card__content ax-card__content--separator-solid ax-card__content--size-small"
      />
    </div>
  </div>
</div>
`;

exports[`DataPicker renders with onSelectColor 1`] = `
<div
  className="ax-card ax-card--size-medium ax-card--border ax-card--shade-1 ax-card--border-radius-small"
  onClick={undefined}
>
  <div
    className="ax-data-picker"
  >
    <div
      className="ax-data-picker__dropdown"
    >
      <div
        className="ax-card__content ax-card__content--separator-solid ax-card__content--size-small"
      >
        <div
          className="ax-grid__container ax-space--x6"
        >
          <div
            className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--vertical-middle"
          >
            <div
              className="ax-grid__cell ax-grid__cell--none"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="ax-color-picker__option ax-color-picker__option--empty ax-color-picker__option--clickable"
                data-ax-at="98df24c31c96"
                onClick={[Function]}
                onFocus={[Function]}
                style={
                  Object {
                    "height": ".75rem",
                    "width": ".75rem",
                  }
                }
              />
            </div>
            <div
              className="ax-grid__cell"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="ax-data-picker__link"
                data-ax-at="9c4d25dadaa7"
                onClick={[Function]}
                onFocus={[Function]}
                pointerEventsDisabled={false}
              >
                <a
                  className="ax-link ax-link--style-body"
                >
                  <div
                    className="ax-grid__container ax-space--x6"
                  >
                    <div
                      className="ax-grid ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--vertical-middle"
                    >
                      <div
                        className="ax-grid__cell"
                        style={
                          Object {
                            "width": undefined,
                          }
                        }
                      >
                        <h5
                          className="ax-space--x2 ax-text--ellipsis ax-text--size-large"
                          title="Lorem ipsum"
                        >
                          Lorem ipsum
                        </h5>
                      </div>
                      <div
                        className="ax-grid__cell ax-grid__cell--none"
                        style={
                          Object {
                            "width": undefined,
                          }
                        }
                      >
                        <svg
                          className="ax-icon ax-icon--chevron-down"
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "<path d=\\"M4 5L2.5 6.5 8 12l5.5-5.5L12 5 8 9z\\" fill-rule=\\"nonzero\\" fill=\\"currentColor\\"/>",
                            }
                          }
                          style={
                            Object {
                              "height": "1rem",
                              "width": "1rem",
                            }
                          }
                          viewBox="0 0 16 16"
                        />
                      </div>
                    </div>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ax-data-picker__meta"
    >
      <div
        className="ax-card__content ax-card__content--separator-solid ax-card__content--size-small"
      />
    </div>
  </div>
</div>
`;

exports[`DataPicker renders with value 1`] = `
<div
  className="ax-card ax-card--size-medium ax-card--border ax-card--shade-1 ax-card--border-radius-small"
  onClick={undefined}
>
  <div
    className="ax-data-picker"
  >
    <div
      className="ax-data-picker__dropdown"
    >
      <div
        className="ax-card__content ax-card__content--separator-solid ax-card__content--size-small"
      >
        <div
          className="ax-grid__container ax-space--x6"
        >
          <div
            className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--vertical-middle"
          >
            <div
              className="ax-grid__cell ax-grid__cell--none"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="ax-color-picker__option ax-color-picker__option--empty"
                onClick={[Function]}
                style={
                  Object {
                    "height": ".75rem",
                    "width": ".75rem",
                  }
                }
              />
            </div>
            <div
              className="ax-grid__cell"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="ax-data-picker__link"
                data-ax-at="9c4d25dadaa7"
                onClick={[Function]}
                onFocus={[Function]}
                pointerEventsDisabled={false}
              >
                <a
                  className="ax-link ax-link--style-body"
                >
                  <div
                    className="ax-grid__container ax-space--x6"
                  >
                    <div
                      className="ax-grid ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--vertical-middle"
                    >
                      <div
                        className="ax-grid__cell"
                        style={
                          Object {
                            "width": undefined,
                          }
                        }
                      >
                        <h5
                          className="ax-space--x2 ax-text--ellipsis ax-text--size-large"
                          title="Dolar amor"
                        >
                          Dolar amor
                        </h5>
                      </div>
                      <div
                        className="ax-grid__cell ax-grid__cell--none"
                        style={
                          Object {
                            "width": undefined,
                          }
                        }
                      >
                        <svg
                          className="ax-icon ax-icon--chevron-down"
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "<path d=\\"M4 5L2.5 6.5 8 12l5.5-5.5L12 5 8 9z\\" fill-rule=\\"nonzero\\" fill=\\"currentColor\\"/>",
                            }
                          }
                          style={
                            Object {
                              "height": "1rem",
                              "width": "1rem",
                            }
                          }
                          viewBox="0 0 16 16"
                        />
                      </div>
                    </div>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ax-data-picker__meta"
    >
      <div
        className="ax-card__content ax-card__content--separator-solid ax-card__content--size-small"
      />
    </div>
  </div>
</div>
`;
